--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +14,10 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
     "sqlite3": "^5.0.8"
+  },
+  "nodemonConfig": { 
+    "ext": "js", 
+    "ignore": ["*.test.ts", "db/*"], 
+    "delay": "2" 
   }
 }
