--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "browserify": "^17.0.0",
     "express": "^4.18.1",
+    "litepicker": "^2.0.12",
     "nodemon": "^2.0.16",
     "sqlite3": "^5.0.8"
   },
-  "nodemonConfig": { 
-    "ext": "js", 
-    "ignore": ["*.test.ts", "db/*"], 
-    "delay": "2" 
+  "nodemonConfig": {
+    "ext": "js",
+    "ignore": [
+      "*.test.ts",
+      "db/*"
+    ],
+    "delay": "2"
   }
 }
