--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jquery": "^3.6.0",
     "jsdom": "^19.0.0",
     "litepicker": "^2.0.12",
     "nodemon": "^2.0.16",
+    "path": "^0.12.7",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8",
     "webpack": "^5.72.1",
