--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "jquery": "^3.6.0",
     "jsdom": "^19.0.0",
     "litepicker": "^2.0.12",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.16",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "xhr2": "^0.2.1"
   },
   "nodemonConfig": {
     "ext": "js",
